--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -78,10 +78,11 @@
     height: 50px;
     border-radius: 50%;
     background-color: $white;
+    font-size: 0;
   }
 
   &__link {
-
+    font-size: 0;
     &:hover {
 
       path {
@@ -274,7 +275,7 @@
 }
 
 .services {
-  padding: 55px 0 65px !important;
+  padding: 45px 0 45px 35px !important;
   background-color: lighten($bg, 11%);
   display: flex;
   justify-content: space-around;
@@ -331,20 +332,22 @@
   }
 }
 
+
+
 .new,
 .week {
-  padding: 77px 0 150px;
+  padding: 67px 0 0px;
   background-color: $white;
 
   &__title {
     text-align: center;
-    margin-bottom: 36px;
+    margin-bottom: 30px;
   }
 
   &__filters {
     display: flex;
     justify-content: center;
-    margin-bottom: 50px !important;
+    margin-bottom: 65px !important;
   }
 
   &__filter {
@@ -385,7 +388,7 @@
   &__bottom {
     display: flex;
     justify-content: space-between;
-    padding: 100px 0;
+    padding: 80px 0 30px;
   }
 }
 
@@ -393,9 +396,10 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 270px;
+  min-height: 380px;
   // max-width: 270px;
   // width: 100%;
-  margin: 0 0 30px 30px;
+  margin: 0 0 45px 30px;
   padding: 30px;
   background-color: $white;
   border-radius: 10px;
@@ -410,7 +414,7 @@
   }
 
   &__image {
-    margin: auto auto 80px;
+    margin: auto auto 67px;
   }
 
   &__img {
@@ -546,7 +550,7 @@
 
   &__characteristics {
     max-width: 330px;
-    margin-bottom: 30px;
+    margin-bottom: 40px;
     @extend %rubik-400;
     font-size: 16px;
     line-height: 30px;
@@ -568,12 +572,12 @@
     &::after {
       content: '';
       position: absolute;
-      width: 23px;
+      width: 22px;
       height: 10px;
       right: 20px;
       top: 50%;
       transform: translateY(-50%);
-      z-index: 1;
+      z-index: 11;
       background-image: url('../images/icon/arrow-text.svg');
     }
 
@@ -583,11 +587,10 @@
   }
 }
 
-
 .new {
 
   &__gallery {
-    margin-bottom: 1px;
+    margin-bottom: 75px;
   }
 }
 
@@ -631,7 +634,6 @@
     font-size: 16px;
     line-height: 1.2;
     color: $accent;
-
   }
 
   &__image {
@@ -647,17 +649,7 @@
     height: 100%;
     object-fit: cover;
   }
-
 }
-
-
-
-
-
-
-
-
-
 
 .video {
   background-image: url('../images/video-bg.png');
@@ -714,14 +706,32 @@
     color: darken($text, 10%);
     position: relative;
 
+    &:hover::before {
+      opacity: 1;
+    }
+
     &::after {
       content: '';
       position: absolute;
       width: 6px;
-      top: 5px;
+      top: 4px;
       height: 11px;
       right: 0;
       background-image: url('../images/icon/arrow-showmore.svg');
+    }
+
+    &::before {
+      content:'';
+      position: absolute;
+      width: 100px;
+      height: 30px;
+      z-index: -1;
+      bottom: -5px;
+      left: -5px;
+      background-color: $bg;
+      border-radius: 30px;
+      opacity: 0;
+      transition: opacity 0.3s linear;
     }
   }
 
@@ -741,7 +751,7 @@
   &__bottom {
     padding: 36px 27px 31px;
     position: relative;
-
+    background-color: $white;
   }
 
   &__label {
@@ -773,7 +783,6 @@
     @extend %rubik-400;
     font-size: 12px;
     text-transform: uppercase;
-
   }
 
   &__author {
@@ -781,7 +790,29 @@
     margin-left: 30px;
   }
 
+  &__companies {
+    position: relative;
+    padding: 90px 0;
+        background-color: lighten($bg, 11%);
 
+    
+    &::before {
+      content:'';
+      position: absolute;
+      width: 100%;
+      height: 170px;
+      bottom: 100%;
+      z-index: -1;
+          background-color: lighten($bg, 11%);
+
+    }
+  }
+
+  &__sponsors {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
 
 
