--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,7 +16,7 @@
   }
 
   &__logo {
-    flex-basis: 300px;
+    // flex-basis: 300px;
   }
 
   &__item {
@@ -46,6 +46,8 @@
     font-size: 15px;
     line-height: 15px;
 
+    &:active,
+    &:focus,
     &:hover {
       color: $bg;
     }
@@ -83,6 +85,9 @@
 
   &__link {
     font-size: 0;
+
+    &:active,
+    &:focus,
     &:hover {
 
       path {
@@ -176,7 +181,10 @@
     cursor: pointer;
     transition: background-color 0.3s linear,
       border-color 0.3s linear;
+    outline: transparent;
 
+    &:active,
+    &:focus,
     &:hover {
       background-color: rgba($white, 0.6);
       border-color: darken($bg, 10%);
@@ -229,22 +237,10 @@
       top: 50%;
       transform: translateY(-50%);
       background-image: url(../images/icon/arrow-btn.svg);
-
     }
 
-
-
-    // &::after {
-    //   content: '';
-    //   position: absolute;
-    //   width: 23px;
-    //   height: 10px;
-    //   right: 20px;
-    //   top: 50%;
-    //   transform: translateY(-50%);
-    //   background-image: url(../images/icon/arrow-btn.svg);
-    // }
-
+    &:active,
+    &:focus,
     &:hover {
       background-color: darken($accent, 10%);
     }
@@ -368,6 +364,8 @@
     box-shadow: none;
     cursor: pointer;
 
+    &:active,
+    &:focus,
     &:hover {
       color: darken($title, 20%);
     }
@@ -406,6 +404,8 @@
   box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
   position: relative;
 
+  &:active,
+  &:focus,
   &:hover {
 
     .card__links {
@@ -475,6 +475,10 @@
       transition: background-color 0.4s linear;
     }
 
+    &:hover {}
+
+    &:active,
+    &:focus,
     &:hover {
 
       &::before {
@@ -492,326 +496,30 @@
     padding: 0;
     border: none;
     background-color: transparent;
-    cursor: pointer
-  }
-
-  &__btn-heart--active {
+    cursor: pointer;
+    outline: transparent;
 
     &:hover {
+
+      path {
+        fill: $white;
+      }
+    }
+
+    &:active,
+    &:focus {
 
       path {
         fill: darken(red, 20%)
       }
     }
+  }
+
+  &__btn-heart--active {
 
     path {
       fill: darken(red, 20%)
     }
-  }
-}
-
-// .object,
-.product {
-  max-width: calc(50% - 15px);
-  background-color: lighten($bg, 11%);
-  position: relative;
-
-  &__image {
-    position: absolute;
-    right: 500px;
-    top: -94px;
-  }
-
-  &__img {
-    max-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-
-  &__descr {
-    padding: 86px 143px 80px 370px;
-  }
-
-  &__box {
-    display: flex;
-    flex-direction: column;
-    height: 220px;
-  }
-
-  &__name {
-    max-width: 330px;
-    margin-bottom: auto;
-    @extend %dmsans-700;
-    font-size: 26px;
-    line-height: 32px;
-    color: $title;
-  }
-
-  &__characteristics {
-    max-width: 330px;
-    margin-bottom: 40px;
-    @extend %rubik-400;
-    font-size: 16px;
-    line-height: 30px;
-  }
-
-  &__link {
-    display: inline-block;
-    align-self: flex-start;
-    position: relative;
-    padding: 20px 86px 20px 20px;
-    color: $text;
-    background-color: transparent;
-    // @extend %btn;
-    @extend %rubik-500;
-    border: 1px solid lighten($grey, 20%);
-    border-radius: 5px;
-    transition: background-color .3s linear;
-
-    &::after {
-      content: '';
-      position: absolute;
-      width: 22px;
-      height: 10px;
-      right: 20px;
-      top: 50%;
-      transform: translateY(-50%);
-      z-index: 11;
-      background-image: url('../images/icon/arrow-text.svg');
-    }
-
-    &:hover {
-      background-color: $bg;
-    }
-  }
-}
-
-.new {
-
-  &__gallery {
-    margin-bottom: 75px;
-  }
-}
-
-
-.object {
-  // display: flex;
-  // justify-content: space-between;
-  max-width: 370px;
-  min-height: 250px;
-  width: 100%;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  padding: 40px 0 30px 40px;
-  background-color: rgb(248, 248, 248);
-  position: relative;
-
-  &__info {
-    position: relative;
-    z-index: 2;
-    // position: absolute;
-    // top: 40px;
-    // left: 40px;
-  }
-
-  &__title-link {
-    @extend %dmsans-700;
-    font-size: 20px;
-    line-height: 1.2;
-    color: darken($title, 20%);
-
-  }
-
-  &__title {
-    max-width: 180px;
-    width: 100%;
-    margin-bottom: 10px;
-  }
-
-  &__type {
-    @extend %dmsans-700;
-    font-size: 16px;
-    line-height: 1.2;
-    color: $accent;
-  }
-
-  &__image {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    z-index: 1;
-  }
-
-  &__img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-}
-
-.video {
-  background-image: url('../images/video-bg.png');
-  width: 100%;
-  min-height: 500px;
-  display: grid;
-
-  &__link {
-    position: relative;
-    place-self: center;
-
-    &::before {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      transform: scale(1);
-      background-color: rgba($accent, 0.4);
-      animation: button-anim 3s ease-in infinite;
-    }
-  }
-}
-
-@keyframes button-anim {
-
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.2);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
-
-.insights {
-  padding-top: 110px;
-
-  &__top {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-bottom: 46px;
-  }
-
-  &__link {
-    display: inline-block;
-    padding-right: 36px;
-    @extend %dmsans-700;
-    color: darken($text, 10%);
-    position: relative;
-
-    &:hover::before {
-      opacity: 1;
-    }
-
-    &::after {
-      content: '';
-      position: absolute;
-      width: 6px;
-      top: 4px;
-      height: 11px;
-      right: 0;
-      background-image: url('../images/icon/arrow-showmore.svg');
-    }
-
-    &::before {
-      content:'';
-      position: absolute;
-      width: 100px;
-      height: 30px;
-      z-index: -1;
-      bottom: -5px;
-      left: -5px;
-      background-color: $bg;
-      border-radius: 30px;
-      opacity: 0;
-      transition: opacity 0.3s linear;
-    }
-  }
-
-  &__inner {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 29px;
-
-  }
-
-  &__card {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  &__bottom {
-    padding: 36px 27px 31px;
-    position: relative;
-    background-color: $white;
-  }
-
-  &__label {
-    position: absolute;
-    display: inline-block;
-    padding: 10px 30px;
-    left: 31px;
-    top: 0;
-    transform: translateY(-50%);
-    border-radius: 30px;
-    color: $white;
-    background-color: $accent;
-    @extend %dmsans-700;
-
-  }
-
-  &__text {
-    padding-bottom: 13px;
-    @extend %dmsans-500;
-    font-size: 18px;
-    line-height: 1.1;
-    color: darken($text, 10%);
-    border-bottom: 1px solid $grey;
-  }
-
-  &__data {
-    display: inline-block;
-    padding-top: 20px;
-    @extend %rubik-400;
-    font-size: 12px;
-    text-transform: uppercase;
-  }
-
-  &__author {
-    display: inline-block;
-    margin-left: 30px;
-  }
-
-  &__companies {
-    position: relative;
-    padding: 90px 0;
-        background-color: lighten($bg, 11%);
-
-    
-    &::before {
-      content:'';
-      position: absolute;
-      width: 100%;
-      height: 170px;
-      bottom: 100%;
-      z-index: -1;
-          background-color: lighten($bg, 11%);
-
-    }
-  }
-
-  &__sponsors {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
   }
 }
 
@@ -853,6 +561,23 @@
     }
   }
 
+  &__phone,
+  &__adress,
+  &__email {
+
+    &:active,
+    &:focus,
+    &:hover {
+      color: $text;
+      text-shadow: 1px 0px 0px darken($text, 10%);
+    }
+
+    span {
+      color: $grey;
+      text-shadow: none;
+    }
+  }
+
   &__phrase {
     margin-bottom: 35px;
   }
@@ -883,6 +608,13 @@
     &:last-child {
       margin-bottom: 0;
     }
+
+    &:hover,
+    &:focus,
+    &:active {
+      color: $text;
+      text-shadow: 1px 0px 0px darken($text, 10%);
+    }
   }
 
   &__form {
@@ -900,6 +632,7 @@
     background-color: lighten($bg, 11%);
     outline: transparent;
     border-bottom: 2px solid transparent;
+    cursor: pointer;
 
 
     &::placeholder {
@@ -909,6 +642,7 @@
       @extend %dmsans-400;
     }
 
+    &:active,
     &:focus {
       border-bottom: 2px solid $bg;
     }
@@ -924,6 +658,8 @@
     cursor: pointer;
     transition: background-color 0.3s linear;
 
+    &:active,
+    &:focus,
     &:hover {
       background-color: darken($accent, 10%);
     }
