--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -5,54 +5,52 @@ $text: #436372;
 $title: #243f4d;
 $accent: #a3bbc8;
 $bg: #fcd7b6;
-$grey: #7b7b7b;
+$grey: #7c7c7c;
 
 
 %dmsans-400 {
-  font-family: 'DMSans-Regular', sans-serif;
+  font-family: 'DMSans', sans-serif;
   font-weight: 400;
 }
 
 %dmsans-500 {
-  font-family: 'DMSans-Medium', sans-serif;
+  font-family: 'DMSans', sans-serif;
   font-weight: 500;
 }
 
 %dmsans-700 {
-  font-family: 'DMSans-Bold', sans-serif;
+  font-family: 'DMSans', sans-serif;
   font-weight: 700;
 }
 
 %rubik-400 {
-  font-family: 'Rubik-Regular', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-weight: 400;
 }
 
 %rubik-500 {
-  font-family: 'Rubik-Medium', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-weight: 500;
 }
 
 %rubik-700 {
-  font-family: 'Rubik-Bold', sans-serif;
+  font-family: 'Rubik', sans-serif;
   font-weight: 700;
 }
 
-// %btn {
-//   position: relative;
-//   font-size: 15px;
-//   line-height: 15;
-//   @extend %rubik-500;
+%btn {
+  color: $white;
+  border: 1px solid transparent;
+  background-color: $accent; 
+  cursor: pointer;
+  font-size: 15px;
+  line-height: 1;
+}
 
-//    &::after {
-//     content: '';
-//     position: absolute;
-//     width: 23px;
-//     height: 10px;
-//     right: 20px;
-//     top: 50%;
-//     transform: translateY(-50%);
-    
-//   }
+@function max($numbers...) {
+  @return m#{a}x(#{$numbers});
+}
 
-// }
+@function min($numbers...) {
+  @return m#{i}n(#{$numbers});
+}
