--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,13 +1,18 @@
-@import "vars";
 @import "reset";
+@import "vars";
 @import "global";
 @import "fonts";
 @import "../../node_modules/slick-carousel/slick/slick.scss";
-@import "../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox.scss";
+@import "../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox";
 
 .header {
   padding: 46px 0;
   background-color: $white;
+  position: fixed;
+  top: 0;
+  min-height: 146px;
+  z-index: 100;
+  min-width: 100%;
 
   &__inner {
     display: flex;
@@ -15,28 +20,26 @@
     justify-content: space-between;
   }
 
-  &__logo {
-    // flex-basis: 300px;
-  }
-
   &__item {
     display: inline-block;
+    // transition: all 2s linear;
 
-    &+.header__item {
+    &:hover {
+
+      .header__menu-link {
+        color: $bg;
+      }
+    }
+
+    &+& {
       margin-left: 34px;
     }
-  }
 
-  .drop-menu {
-    position: relative;
-    padding-right: 13px;
+    &--active {
 
-    &::after {
-      content: '+';
-      position: absolute;
-      right: 0;
-      top: 50%;
-      transform: translateY(-50%);
+      .header__menu-link {
+        color: $bg;
+      }
     }
   }
 
@@ -44,50 +47,72 @@
     @extend %rubik-500;
     color: $text;
     font-size: 15px;
-    line-height: 15px;
+    line-height: 1;
+    transition: color 0.3s linear;
 
-    &:active,
-    &:focus,
-    &:hover {
-      color: $bg;
-    }
-  }
-
-  &__menu-link--active {
-    color: $bg;
-  }
-
-  &__user-nav {
-    display: flex;
-
-    &>a:first-child {
-      background-color: #edf1f4;
+    &:active {
+      color: darken($accent, 10%);
     }
 
-    &>a:last-child {
-      background-color: $accent;
+    &:focus {
+      color: $accent;
     }
   }
 }
 
 .user-nav {
+  display: flex;
 
-  &>a {
+  &__cabinet {
+
+    span {
+      position: absolute;
+      width: 16px;
+      height: 16px;
+      top: 5px;
+      right: 5px;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 1.8;
+      background-color: $white;
+      font-size: 10px;
+    }
+  }
+
+  // &__link-find {
+  //   background-color: #edf1f4;
+
+  // }
+
+  // &__link-menu {
+  //   background-color: $accent;
+
+  // }
+
+  &__link-menu,
+  &__link-find,
+  &__link-heart,
+  &__link-basket {
     display: flex;
     align-items: center;
     justify-content: center;
     min-width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: $white;
-    font-size: 0;
-  }
-
-  &__link {
     font-size: 0;
 
-    &:active,
-    &:focus,
+    path {
+      transition: fill 0.3s linear;
+    }
+
+    &:active {
+      background-color: $white;
+    }
+
+    &:focus {
+      background-color: darken($bg, 10%);
+    }
+
     &:hover {
 
       path {
@@ -95,6 +120,70 @@
       }
     }
   }
+
+  &__link-find{
+    position: relative;
+    background-color: lighten($accent, 20%);
+  }
+
+  &__link-menu {
+    position: relative;
+    background-color: $accent;
+  }
+}
+
+.drop-menu {
+  position: relative;
+  padding-right: 13px;
+
+  &:hover {
+
+    .drop-menu__list {
+      opacity: 1;
+    }
+  }
+
+  &::after {
+    content: '+';
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  &__list {
+    position: absolute;
+    left: 50%;
+    top: 20px;
+    border-top: 2px solid tomato;
+    z-index: 10;
+    opacity: 0;
+    transition: opacity 0.3s linear;
+  }
+
+  &__link {
+    display: block;
+    @extend %rubik-500;
+    padding: 15px 30px;
+    background-color: $accent;
+    color: $title;
+    font-size: 16px;
+    border-bottom: 1px solid $bg;
+    letter-spacing: 0.1em;
+    transition: text-shadow 0.3s linear, background-color 0.2s linear;
+
+    &:last-child {
+      border-bottom: 1px solid transparent;
+    }
+
+    &:hover {
+      text-shadow: 0px 0px 1px $title;
+      background-color: darken($accent, 10%);
+    }
+  }
+}
+
+.user-nav {
 
   &__cabinet {
     display: flex;
@@ -127,26 +216,49 @@
       border-radius: 50%;
     }
 
-    span {
-      position: absolute;
-      width: 16px;
-      height: 16px;
-      top: 5px;
-      right: 5px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 18px;
-      background-color: $white;
-      font-size: 10px;
-    }
+    
   }
 }
 
 .main-slider {
+  padding-top: 146px;
 
   &__inner {
     padding: 95px 180px 20px 300px;
     background-color: $bg;
+
+    li {
+      margin: 0 6px;
+    }
+
+    button {
+      width: 30px;
+      height: 30px;
+      padding: 0;
+      border-radius: 50%;
+      background-color: rgba($white, 0.32);
+      font-size: 12px;
+      line-height: 2.5;
+      @extend %rubik-500;
+      border: 1px solid transparent;
+      cursor: pointer;
+      transition: background-color 0.3s linear,
+        border-color 0.3s linear;
+      outline: transparent;
+
+      &:active {
+        background-color: lighten($text, 40%);
+      }
+
+      &:focus {
+        background-color: lighten($grey, 40%);
+      }
+
+      &:hover {
+        background-color: rgba($white, 0.6);
+        border-color: darken($bg, 10%);
+      }
+    }
   }
 
   .slick-dots {
@@ -157,37 +269,10 @@
     transform: translateX(-50%);
   }
 
-  li {
-    margin: 0 6px;
-  }
-
   .slick-active {
 
     button {
       background-color: rgba($white, 1);
-    }
-  }
-
-  button {
-    width: 30px;
-    height: 30px;
-    padding: 0;
-    border-radius: 50%;
-    background-color: rgba($white, 0.32);
-    font-size: 12px;
-    line-height: 30px;
-    @extend %rubik-500;
-    border: 1px solid transparent;
-    cursor: pointer;
-    transition: background-color 0.3s linear,
-      border-color 0.3s linear;
-    outline: transparent;
-
-    &:active,
-    &:focus,
-    &:hover {
-      background-color: rgba($white, 0.6);
-      border-color: darken($bg, 10%);
     }
   }
 
@@ -202,15 +287,16 @@
 
   &__title {
     max-width: 464px;
+    color: $title;
     font-size: 72px;
-    line-height: 72px;
+    line-height: 1;
     @extend %rubik-500;
     text-transform: uppercase;
   }
 
   &__subtitle {
     font-size: 18px;
-    line-height: 30px;
+    line-height: 1.7;
     margin: 22px 0 30px 0;
     text-transform: none;
 
@@ -220,13 +306,10 @@
     padding: 23px 100px 20px 30px;
     @extend %rubik-500;
     display: inline-block;
-    color: $white;
-    background-color: $accent;
+    @extend %btn;
     transition: background-color 0.4s linear;
     position: relative;
-    font-size: 15px;
-    line-height: 15px;
-
+    outline: transparent;
 
     &::after {
       content: '';
@@ -239,8 +322,14 @@
       background-image: url(../images/icon/arrow-btn.svg);
     }
 
-    &:active,
-    &:focus,
+    &:active {
+      background-color: lighten($text, 20%);
+    }
+
+    &:focus {
+      color: $title;
+    }
+
     &:hover {
       background-color: darken($accent, 10%);
     }
@@ -271,7 +360,7 @@
 }
 
 .services {
-  padding: 45px 0 45px 35px !important;
+  padding: 45px 0 45px 35px;
   background-color: lighten($bg, 11%);
   display: flex;
   justify-content: space-around;
@@ -290,45 +379,58 @@
       background-repeat: no-repeat;
     }
 
-    &--support::before {
-      width: 49px;
-      height: 49px;
-      background-image: url('../images/icon/support.svg');
+    &--support {
+
+      &::before {
+        width: 52px;
+        height: 54px;
+        background-image: url('../images/icon/support.png');
+
+      }
+    }
+
+    &--delivery {
+
+      &::before {
+        width: 60px;
+        height: 40px;
+        background-image: url('../images/icon/delivery-truck.png');
+      }
 
     }
 
-    &--delivery::before {
-      width: 50px;
-      height: 30px;
-      background-image: url('../images/icon/delivery-truck.svg');
-    }
+    &--card {
 
-    &--card::before {
-      width: 49px;
-      height: 44px;
-      background-image: url('../images/icon/credit-card.svg');
+      &::before {
+        width: 54px;
+        height: 54px;
+        background-image: url('../images/icon/credit-card.png');
+      }
     }
   }
 
   &__title {
     margin-bottom: 15px;
+    font-size: 18px;
     @extend %dmsans-700;
     color: darken($title, 5%);
   }
 
-  p {
-    @extend %dmsans-400;
-    line-height: 18px;
-    margin-bottom: 10px;
-    color: $text;
+  &__content {
 
-    &:last-child {
-      margin-bottom: 0;
+    p {
+      @extend %dmsans-400;
+      line-height: 1.125;
+      margin-bottom: 10px;
+      color: $text;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
+
 }
-
-
 
 .new,
 .week {
@@ -343,7 +445,7 @@
   &__filters {
     display: flex;
     justify-content: center;
-    margin-bottom: 65px !important;
+    margin-bottom: 65px;
   }
 
   &__filter {
@@ -356,16 +458,23 @@
 
   &__btn {
     padding: 0;
-    color: $grey;
+    font-size: 16px;
     @extend %dmsans-700;
+    color: #8b8b8b;
     transition: color 0.4s linear;
-    border: none;
+    border: 1px solid transparent;
     background-color: transparent;
     box-shadow: none;
     cursor: pointer;
 
-    &:active,
-    &:focus,
+    &:active {
+      border-color: $accent;
+    }
+
+    &:focus {
+      color: lighten($title, 20%);
+    }
+
     &:hover {
       color: darken($title, 20%);
     }
@@ -390,7 +499,7 @@
   }
 }
 
-.card {
+.product-card {
   display: flex;
   flex-direction: column;
   flex: 0 0 270px;
@@ -408,7 +517,7 @@
   &:focus,
   &:hover {
 
-    .card__links {
+    .product-card__links {
       opacity: 1;
     }
   }
@@ -434,7 +543,22 @@
     @extend %dmsans-500;
     font-size: 16px;
     line-height: 1.2;
-    color: $title;
+
+    a {
+      color: inherit;
+
+      &:hover {
+        color: $accent;
+      }
+
+      &:active {
+        color: darken($title, 20%);
+      }
+
+      &:focus {
+        color: lighten($title, 20%);
+      }
+    }
   }
 
   &__price {
@@ -463,6 +587,19 @@
     position: relative;
     display: grid;
     place-items: center;
+    padding: 0;
+    @extend %btn;
+    font-size: 0;
+    background-color: transparent;
+    outline: transparent;
+
+    svg {
+      filter: drop-shadow(3px 3px 2px rgba(252, 215, 182, 0.9));
+    }
+
+    path {
+      fill: $accent;
+    }
 
     &::before {
       content: '';
@@ -475,10 +612,6 @@
       transition: background-color 0.4s linear;
     }
 
-    &:hover {}
-
-    &:active,
-    &:focus,
     &:hover {
 
       &::before {
@@ -489,40 +622,32 @@
         fill: $white;
       }
     }
-  }
 
-  &__btn-heart,
-  &__btn-basket {
-    padding: 0;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-    outline: transparent;
-
-    &:hover {
-
-      path {
-        fill: $white;
-      }
-    }
-
-    &:active,
     &:focus {
 
+      &::before {
+        background-color: darken($accent, 20%);
+      }
+
       path {
-        fill: darken(red, 20%)
+        fill: darken($white, 10%);
       }
     }
-  }
 
-  &__btn-heart--active {
+    &:active {
 
-    path {
-      fill: darken(red, 20%)
+      path {
+        fill: darken(red, 20%);
+      }
     }
   }
 }
 
+.product-card__btn-heart.product-card__btn-heart--active {
+  path {
+    fill: darken(red, 20%);
+  }
+}
 
 .footer {
   background-color: $white;
@@ -545,37 +670,15 @@
     margin-top: -14px;
   }
 
-  &__phone,
-  &__adress,
-  &__email,
+  &__adress {
+    font-style: normal;
+  }
+
   &__phrase {
     display: inline-block;
     margin-bottom: 20px;
     font-size: 14px;
-    line-height: 1.16;
-    color: $grey;
     @extend %rubik-400;
-
-    span {
-      text-transform: uppercase;
-    }
-  }
-
-  &__phone,
-  &__adress,
-  &__email {
-
-    &:active,
-    &:focus,
-    &:hover {
-      color: $text;
-      text-shadow: 1px 0px 0px darken($text, 10%);
-    }
-
-    span {
-      color: $grey;
-      text-shadow: none;
-    }
   }
 
   &__phrase {
@@ -587,31 +690,34 @@
     color: #1f2044;
     @extend %dmsans-700;
     font-size: 16px;
-    line-height: 21px;
+    line-height: 1.31;
     text-transform: uppercase;
   }
 
-  &__list {
-
-    li {
-      margin-bottom: 15px;
-    }
+  &__list-item {
+    margin-bottom: 15px;
   }
 
   &__link {
     display: inline-block;
+    margin-bottom: 20px;
     font-size: 14px;
-    line-height: 1.16;
-    color: $grey;
     @extend %rubik-400;
+    color: $grey;
 
     &:last-child {
       margin-bottom: 0;
     }
 
-    &:hover,
-    &:focus,
     &:active {
+      color: darken($accent, 10%);
+    }
+
+    &:focus {
+      color: $accent;
+    }
+
+    &:hover {
       color: $text;
       text-shadow: 1px 0px 0px darken($text, 10%);
     }
@@ -625,7 +731,6 @@
     max-height: 38px;
     padding: 13px 13px 15px;
     font-size: 12px;
-    line-height: 1.16;
     color: darken($text, 16%);
     @extend %dmsans-400;
     border: none;
@@ -633,33 +738,45 @@
     outline: transparent;
     border-bottom: 2px solid transparent;
     cursor: pointer;
+    transition: background-color 0.3s linear;
 
 
     &::placeholder {
       font-size: 12px;
-      line-height: 1.16;
+
       color: #234969;
       @extend %dmsans-400;
     }
 
-    &:active,
+    &:active {
+      color: darken($bg, 8%);
+    }
+
     &:focus {
       border-bottom: 2px solid $bg;
+    }
+
+    &:hover {
+      background-color: lighten($bg, 8%);
     }
   }
 
   &__btn {
     padding: 10px 13px;
-    background-color: $accent;
-    border: none;
     box-shadow: none;
     @extend %dmsans-400;
-    color: $white;
-    cursor: pointer;
+    @extend %btn;
+    font-size: 14px;
     transition: background-color 0.3s linear;
 
-    &:active,
-    &:focus,
+    &:active {
+      background-color: lighten($accent, 10%);
+    }
+
+    &:focus {
+      color: darken($white, 10%)
+    }
+
     &:hover {
       background-color: darken($accent, 10%);
     }
@@ -674,7 +791,25 @@
   &__copy-text,
   &__nav-link {
     @extend %rubik-400;
+  }
+
+  &__nav-link {
     color: $grey;
+    transition: text-shadow 0.3s linear,
+      color 0.3s linear;
+
+    &:hover {
+      color: $text;
+      text-shadow: 1px 0px 0px darken($text, 10%);
+    }
+
+    &:active {
+      color: lighten($accent, 10%);
+    }
+
+    &:focus {
+      color: $text;
+    }
   }
 
   &__item {
