--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,831 +2,36 @@
 @import "vars";
 @import "global";
 @import "fonts";
-@import "../../node_modules/slick-carousel/slick/slick.scss";
-@import "../../node_modules/@fancyapps/fancybox/dist/jquery.fancybox";
+@import "libs";
 
-.header {
-  padding: 46px 0;
-  background-color: $white;
-  position: fixed;
-  top: 0;
-  min-height: 146px;
-  z-index: 100;
-  min-width: 100%;
+@import "blocks/header";
+@import "blocks/main-slider";
+@import "blocks/week";
+@import "blocks/footer";
 
-  &__inner {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+@import "components/user-nav";
+@import "components/drop-menu";
+@import "components/services";
+@import "components/filter";
+@import "components/product-card";
 
-  &__item {
-    display: inline-block;
-    // transition: all 2s linear;
 
-    &:hover {
 
-      .header__menu-link {
-        color: $bg;
-      }
-    }
 
-    &+& {
-      margin-left: 34px;
-    }
 
-    &--active {
 
-      .header__menu-link {
-        color: $bg;
-      }
-    }
-  }
 
-  &__menu-link {
-    @extend %rubik-500;
-    color: $text;
-    font-size: 15px;
-    line-height: 1;
-    transition: color 0.3s linear;
 
-    &:active {
-      color: darken($accent, 10%);
-    }
 
-    &:focus {
-      color: $accent;
-    }
-  }
-}
 
-.user-nav {
-  display: flex;
 
-  &__cabinet {
 
-    span {
-      position: absolute;
-      width: 16px;
-      height: 16px;
-      top: 5px;
-      right: 5px;
-      border-radius: 50%;
-      text-align: center;
-      line-height: 1.8;
-      background-color: $white;
-      font-size: 10px;
-    }
-  }
 
-  // &__link-find {
-  //   background-color: #edf1f4;
 
-  // }
 
-  // &__link-menu {
-  //   background-color: $accent;
 
-  // }
 
-  &__link-menu,
-  &__link-find,
-  &__link-heart,
-  &__link-basket {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    font-size: 0;
 
-    path {
-      transition: fill 0.3s linear;
-    }
-
-    &:active {
-      background-color: $white;
-    }
-
-    &:focus {
-      background-color: darken($bg, 10%);
-    }
-
-    &:hover {
-
-      path {
-        fill: darken(red, 20%);
-      }
-    }
-  }
-
-  &__link-find{
-    position: relative;
-    background-color: lighten($accent, 20%);
-  }
-
-  &__link-menu {
-    position: relative;
-    background-color: $accent;
-  }
-}
-
-.drop-menu {
-  position: relative;
-  padding-right: 13px;
-
-  &:hover {
-
-    .drop-menu__list {
-      opacity: 1;
-    }
-  }
-
-  &::after {
-    content: '+';
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-  }
-
-  &__list {
-    position: absolute;
-    left: 50%;
-    top: 20px;
-    border-top: 2px solid tomato;
-    z-index: 10;
-    opacity: 0;
-    transition: opacity 0.3s linear;
-  }
-
-  &__link {
-    display: block;
-    @extend %rubik-500;
-    padding: 15px 30px;
-    background-color: $accent;
-    color: $title;
-    font-size: 16px;
-    border-bottom: 1px solid $bg;
-    letter-spacing: 0.1em;
-    transition: text-shadow 0.3s linear, background-color 0.2s linear;
-
-    &:last-child {
-      border-bottom: 1px solid transparent;
-    }
-
-    &:hover {
-      text-shadow: 0px 0px 1px $title;
-      background-color: darken($accent, 10%);
-    }
-  }
-}
-
-.user-nav {
-
-  &__cabinet {
-    display: flex;
-    justify-content: space-between;
-    min-width: 180px;
-    margin: 0 20px;
-    padding: 0 20px;
-    border-radius: 25px;
-    background-color: $bg;
-    position: relative;
-
-    &::after {
-      content: '';
-      position: absolute;
-      background-color: rgba($white, 0.4);
-      width: 1px;
-      height: 32px;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-    }
-
-    a {
-      display: inline-flex;
-      position: relative;
-      justify-content: center;
-      align-items: center;
-      min-width: 50px;
-      height: 50px;
-      border-radius: 50%;
-    }
-
-    
-  }
-}
-
-.main-slider {
-  padding-top: 146px;
-
-  &__inner {
-    padding: 95px 180px 20px 300px;
-    background-color: $bg;
-
-    li {
-      margin: 0 6px;
-    }
-
-    button {
-      width: 30px;
-      height: 30px;
-      padding: 0;
-      border-radius: 50%;
-      background-color: rgba($white, 0.32);
-      font-size: 12px;
-      line-height: 2.5;
-      @extend %rubik-500;
-      border: 1px solid transparent;
-      cursor: pointer;
-      transition: background-color 0.3s linear,
-        border-color 0.3s linear;
-      outline: transparent;
-
-      &:active {
-        background-color: lighten($text, 40%);
-      }
-
-      &:focus {
-        background-color: lighten($grey, 40%);
-      }
-
-      &:hover {
-        background-color: rgba($white, 0.6);
-        border-color: darken($bg, 10%);
-      }
-    }
-  }
-
-  .slick-dots {
-    position: absolute;
-    bottom: 44px;
-    display: flex;
-    left: 50%;
-    transform: translateX(-50%);
-  }
-
-  .slick-active {
-
-    button {
-      background-color: rgba($white, 1);
-    }
-  }
-
-  &__box {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__content {
-    padding-top: 120px;
-  }
-
-  &__title {
-    max-width: 464px;
-    color: $title;
-    font-size: 72px;
-    line-height: 1;
-    @extend %rubik-500;
-    text-transform: uppercase;
-  }
-
-  &__subtitle {
-    font-size: 18px;
-    line-height: 1.7;
-    margin: 22px 0 30px 0;
-    text-transform: none;
-
-  }
-
-  &__link {
-    padding: 23px 100px 20px 30px;
-    @extend %rubik-500;
-    display: inline-block;
-    @extend %btn;
-    transition: background-color 0.4s linear;
-    position: relative;
-    outline: transparent;
-
-    &::after {
-      content: '';
-      position: absolute;
-      width: 23px;
-      height: 10px;
-      right: 20px;
-      top: 50%;
-      transform: translateY(-50%);
-      background-image: url(../images/icon/arrow-btn.svg);
-    }
-
-    &:active {
-      background-color: lighten($text, 20%);
-    }
-
-    &:focus {
-      color: $title;
-    }
-
-    &:hover {
-      background-color: darken($accent, 10%);
-    }
-  }
-
-  &__img-box {
-    position: relative;
-    padding: 170px 100px 200px 0;
-
-    &::before {
-      content: '';
-      position: absolute;
-      background-image: url(../images/slider/slider-circle.png);
-      background-repeat: no-repeat;
-      background-position: right;
-      height: 634px;
-      width: 609px;
-      right: 0;
-      top: 0;
-      z-index: -1;
-    }
-  }
-
-  &__img {
-    max-width: 100%;
-    max-height: 100%;
-  }
-}
-
-.services {
-  padding: 45px 0 45px 35px;
-  background-color: lighten($bg, 11%);
-  display: flex;
-  justify-content: space-around;
-
-  &__item {
-    flex: 0 0 309px;
-    padding-left: 90px;
-    position: relative;
-
-    &::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      top: 0;
-      background-size: cover;
-      background-repeat: no-repeat;
-    }
-
-    &--support {
-
-      &::before {
-        width: 52px;
-        height: 54px;
-        background-image: url('../images/icon/support.png');
-
-      }
-    }
-
-    &--delivery {
-
-      &::before {
-        width: 60px;
-        height: 40px;
-        background-image: url('../images/icon/delivery-truck.png');
-      }
-
-    }
-
-    &--card {
-
-      &::before {
-        width: 54px;
-        height: 54px;
-        background-image: url('../images/icon/credit-card.png');
-      }
-    }
-  }
-
-  &__title {
-    margin-bottom: 15px;
-    font-size: 18px;
-    @extend %dmsans-700;
-    color: darken($title, 5%);
-  }
-
-  &__content {
-
-    p {
-      @extend %dmsans-400;
-      line-height: 1.125;
-      margin-bottom: 10px;
-      color: $text;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-  }
-
-}
-
-.new,
-.week {
-  padding: 67px 0 0px;
-  background-color: $white;
-
-  &__title {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-
-  &__filters {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 65px;
-  }
-
-  &__filter {
-    margin-right: 30px;
-
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-
-  &__btn {
-    padding: 0;
-    font-size: 16px;
-    @extend %dmsans-700;
-    color: #8b8b8b;
-    transition: color 0.4s linear;
-    border: 1px solid transparent;
-    background-color: transparent;
-    box-shadow: none;
-    cursor: pointer;
-
-    &:active {
-      border-color: $accent;
-    }
-
-    &:focus {
-      color: lighten($title, 20%);
-    }
-
-    &:hover {
-      color: darken($title, 20%);
-    }
-  }
-
-  .mixitup-control-active {
-    color: darken($title, 20%);
-  }
-
-  &__gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    margin-left: -30px;
-    margin-bottom: 60px;
-  }
-
-  &__bottom {
-    display: flex;
-    justify-content: space-between;
-    padding: 80px 0 30px;
-  }
-}
-
-.product-card {
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 270px;
-  min-height: 380px;
-  // max-width: 270px;
-  // width: 100%;
-  margin: 0 0 45px 30px;
-  padding: 30px;
-  background-color: $white;
-  border-radius: 10px;
-  box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
-  position: relative;
-
-  &:active,
-  &:focus,
-  &:hover {
-
-    .product-card__links {
-      opacity: 1;
-    }
-  }
-
-  &__image {
-    margin: auto auto 67px;
-  }
-
-  &__img {
-    display: block;
-    max-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-    object-position: center;
-  }
-
-  &__info {
-    text-align: center;
-  }
-
-  &__name {
-    margin-bottom: 12px;
-    @extend %dmsans-500;
-    font-size: 16px;
-    line-height: 1.2;
-
-    a {
-      color: inherit;
-
-      &:hover {
-        color: $accent;
-      }
-
-      &:active {
-        color: darken($title, 20%);
-      }
-
-      &:focus {
-        color: lighten($title, 20%);
-      }
-    }
-  }
-
-  &__price {
-    @extend %dmsans-700;
-    font-size: 16px;
-    line-height: 1.2;
-    color: $accent;
-  }
-
-  &__links {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    opacity: 0;
-    transition: opacity 0.4s linear;
-  }
-
-  &__link,
-  &__btn-heart,
-  &__btn-basket {
-    margin: 0 20px;
-    position: relative;
-    display: grid;
-    place-items: center;
-    padding: 0;
-    @extend %btn;
-    font-size: 0;
-    background-color: transparent;
-    outline: transparent;
-
-    svg {
-      filter: drop-shadow(3px 3px 2px rgba(252, 215, 182, 0.9));
-    }
-
-    path {
-      fill: $accent;
-    }
-
-    &::before {
-      content: '';
-      position: absolute;
-      width: 46px;
-      height: 46px;
-      border-radius: 50%;
-      background-color: $white;
-      z-index: -1;
-      transition: background-color 0.4s linear;
-    }
-
-    &:hover {
-
-      &::before {
-        background-color: $accent;
-      }
-
-      path {
-        fill: $white;
-      }
-    }
-
-    &:focus {
-
-      &::before {
-        background-color: darken($accent, 20%);
-      }
-
-      path {
-        fill: darken($white, 10%);
-      }
-    }
-
-    &:active {
-
-      path {
-        fill: darken(red, 20%);
-      }
-    }
-  }
-}
-
-.product-card__btn-heart.product-card__btn-heart--active {
-  path {
-    fill: darken(red, 20%);
-  }
-}
-
-.footer {
-  background-color: $white;
-  padding-top: 80px;
-
-  &__inner {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 75px;
-    border-bottom: 1px solid #dae4e9;
-  }
-
-  &__col {
-    flex: 0 1 200px;
-  }
-
-  &__logo {
-    display: inline-block;
-    margin-bottom: 24px;
-    margin-top: -14px;
-  }
-
-  &__adress {
-    font-style: normal;
-  }
-
-  &__phrase {
-    display: inline-block;
-    margin-bottom: 20px;
-    font-size: 14px;
-    @extend %rubik-400;
-  }
-
-  &__phrase {
-    margin-bottom: 35px;
-  }
-
-  &__title {
-    margin-bottom: 24px;
-    color: #1f2044;
-    @extend %dmsans-700;
-    font-size: 16px;
-    line-height: 1.31;
-    text-transform: uppercase;
-  }
-
-  &__list-item {
-    margin-bottom: 15px;
-  }
-
-  &__link {
-    display: inline-block;
-    margin-bottom: 20px;
-    font-size: 14px;
-    @extend %rubik-400;
-    color: $grey;
-
-    &:last-child {
-      margin-bottom: 0;
-    }
-
-    &:active {
-      color: darken($accent, 10%);
-    }
-
-    &:focus {
-      color: $accent;
-    }
-
-    &:hover {
-      color: $text;
-      text-shadow: 1px 0px 0px darken($text, 10%);
-    }
-  }
-
-  &__form {
-    display: flex;
-  }
-
-  &__input {
-    max-height: 38px;
-    padding: 13px 13px 15px;
-    font-size: 12px;
-    color: darken($text, 16%);
-    @extend %dmsans-400;
-    border: none;
-    background-color: lighten($bg, 11%);
-    outline: transparent;
-    border-bottom: 2px solid transparent;
-    cursor: pointer;
-    transition: background-color 0.3s linear;
-
-
-    &::placeholder {
-      font-size: 12px;
-
-      color: #234969;
-      @extend %dmsans-400;
-    }
-
-    &:active {
-      color: darken($bg, 8%);
-    }
-
-    &:focus {
-      border-bottom: 2px solid $bg;
-    }
-
-    &:hover {
-      background-color: lighten($bg, 8%);
-    }
-  }
-
-  &__btn {
-    padding: 10px 13px;
-    box-shadow: none;
-    @extend %dmsans-400;
-    @extend %btn;
-    font-size: 14px;
-    transition: background-color 0.3s linear;
-
-    &:active {
-      background-color: lighten($accent, 10%);
-    }
-
-    &:focus {
-      color: darken($white, 10%)
-    }
-
-    &:hover {
-      background-color: darken($accent, 10%);
-    }
-  }
-
-  &__copy {
-    display: flex;
-    justify-content: space-between;
-    padding: 38px 0 40px;
-  }
-
-  &__copy-text,
-  &__nav-link {
-    @extend %rubik-400;
-  }
-
-  &__nav-link {
-    color: $grey;
-    transition: text-shadow 0.3s linear,
-      color 0.3s linear;
-
-    &:hover {
-      color: $text;
-      text-shadow: 1px 0px 0px darken($text, 10%);
-    }
-
-    &:active {
-      color: lighten($accent, 10%);
-    }
-
-    &:focus {
-      color: $text;
-    }
-  }
-
-  &__item {
-    display: inline-block;
-    margin-left: 16px;
-    padding-right: 16px;
-    border-right: 1px solid $grey;
-
-    &:last-child {
-      border-right: none;
-    }
-  }
-
-
-
-
-}
 
 
 @import "media";
