--- a/app/scss/blocks/week-and-new.scss
+++ b/app/scss/blocks/week-and-new.scss
@@ -1,3 +1,4 @@
+.new,
 .week {
   padding: 67px 0 0px;
   background-color: $white;
@@ -35,5 +36,6 @@
     display: flex;
     justify-content: space-between;
     padding: 80px 0 30px;
+    
   }
 }
