--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -41,10 +41,15 @@ $grey: #7c7c7c;
 %btn {
   color: $white;
   border: 1px solid transparent;
-  background-color: $accent; 
+  background-color: $accent;
   cursor: pointer;
   font-size: 15px;
   line-height: 1;
+}
+
+%hover-bg {
+  background: rgb(163, 187, 200);
+  background: linear-gradient(90deg, rgba(163, 187, 200, 1) 0%, rgba(252, 215, 182, 1) 100%);
 }
 
 @function max($numbers...) {
