--- a/app/scss/blocks/main-slider.scss
+++ b/app/scss/blocks/main-slider.scss
@@ -2,7 +2,7 @@
   padding-top: 146px;
 
   &__inner {
-    padding: 95px 180px 20px 300px;
+    padding: 95px 180px 28px 300px;
     background-color: $bg;
   }
 
@@ -74,15 +74,19 @@
     line-height: 1;
     @extend %rubik-500;
     text-transform: uppercase;
+
+    p {
+        font-size: 18px;
+        line-height: 1.7;
+        margin: 22px 0 30px 0;
+        text-transform: none;
+        color: $text;
+        @extend %rubik-400;
+    }
   }
 
   &__subtitle {
-    font-size: 18px;
-    line-height: 1.7;
-    margin: 22px 0 30px 0;
-    text-transform: none;
-    color: $text;
-    @extend %rubik-400;
+  
 
   }
 
