--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,47 +1,26 @@
-@import "reset";
-@import "vars";
-@import "global";
-@import "fonts";
-@import "libs";
-
-
-
-
+@import "global/reset";
+@import "global/vars";
+@import "global/global";
+@import "global/fonts";
+@import "global/libs";
 
 
 @import "blocks/header";
 @import "blocks/main-slider";
-@import "blocks/week-and-new";
+@import "blocks/week";
+@import "blocks/new";
 @import "blocks/video";
 @import "blocks/insights";
 @import "blocks/footer";
 
+
+@import "components/logo";
 @import "components/user-nav";
 @import "components/drop-menu";
 @import "components/services";
 @import "components/filter";
 @import "components/product-card";
 @import "components/product-week";
-@import "components/object";
+@import "components/object-new";
+@import "components/sponsor";
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@import "media";
